2010-02-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.134-1

2010-02-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Innocent bug fixes which defeated damage_timeout_plus and
	damage_timeout_max entirely :)

	* src/util/hd-transition.c:
	  hd_transition_rotating_fsm(): don't forget to restart the
	  damage_timeout_max timer.
	  hd_transition_rotate_ignore_damage(): reset the remaining time,
	  not the expiry (which is only relevant when the hptimer expires)

2010-02-23  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Add the icon for the User Guide.
	Fixes: NB#155449

	* configure.ac:
	* data/Makefile.am:
	* data/applications/Makefile.am:
	* data/applications/user-guide.desktop:

2010-02-23  Marc Ordinas i Llopis <marc.ordinasillopis@collabora.co.uk>

	Task launcher editor changes.
	Fixes: NB#157292

	* src/launcher/hd-launcher.c: Select the correct editor tile after
	  showing the window.
	* src/launcher/hd-launcher-editor.c: Layout improvements.

2010-02-22  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.133-1

2010-02-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#157525 problem with CSM over movieClip and button

	First problem: oversized CSM caused blurring.
	* src/mb/hd-comp-mgr.h (hd_comp_mgr_client_is_maximized):
	  Take monsterization into account when deciding about maximalness.
	  Also don't reject it flatly if it's a little offscreen.
	* src/home/hd-render-manager.c (hd_render_manager_update_blur_state):
	  Use the frame geometry insted of the window geometry as we have
	  started to add thick borders.

	Second problem: submenus of the CSM could be blurred.
	Because of the funny geometry, geo_is_suitable_for_screen()
	thought it wasn't and rotated it, and consequently clip_geo()
	decided it was off-screen and the actor was left in home_blur
	rather than moved to app_top in hdrm_restack().
	* src/home/hd-render-manager.c
	(hd_render_manager_geo_is_suitable_for_screen):